service-nginx-ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /node
          backend:
            serviceName: node-app
            servicePort: 8080
        - path: /static
          backend:
            serviceName: static-app
            servicePort: 80
